# demo_mpi

./: CMakeLists.txt  Makefile  ReadMe.md  factorial_reduce.cc  hello_mpi.cc  main.cbp  mini_param_from_arr.cc  montecarlo_pi.cc  ring_broadcast_mpi.cc  shear_sort.cc
